<resources>
    <string name="app_name">CalculateBMI</string>
    <string name="enter">Calculate</string>
    <string name="name">Name</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_calc__b_m_i_result">calc_BMI_result</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="welcome">Welcome :</string>
    <string name="user_Display"></string>
    <string name="user_Status"></string>
    <string name="weight">Weight :</string>
    <string name="status">Status :</string>
    <string name="height">Height :</string>
    <string name="calculate">Calculate</string>
</resources>